<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BusquedaGraduados">

  <ImageView
      android:id="@+id/imageView2"
      android:layout_width="108dp"
      android:layout_height="92dp"
      android:layout_marginStart="40dp"
      android:layout_marginTop="56dp"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:srcCompat="@drawable/graduados" />

  <TextView
      android:id="@+id/textView13"
      android:layout_width="207dp"
      android:layout_height="102dp"
      android:layout_marginTop="56dp"
      android:layout_marginEnd="40dp"
      android:fontFamily="@font/nunito_semibold"
      android:gravity="center"
      android:text="@string/title_busqueda_graduados"
      android:textColor="@color/pink"
      android:textSize="24dp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toEndOf="@+id/imageView2"
      app:layout_constraintTop_toTopOf="parent" />

  <TextView
      android:id="@+id/textView14"
      android:layout_width="358dp"
      android:layout_height="56dp"
      android:layout_marginStart="24dp"
      android:layout_marginTop="24dp"
      android:layout_marginEnd="24dp"
      android:fontFamily="@font/nunito_semibold"
      android:text="@string/subtitle_busqueda"
      android:textColor="@color/black"
      android:textSize="21sp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/imageView2" />

  <TextView
      android:id="@+id/textView15"
      android:layout_width="150dp"
      android:layout_height="40dp"
      android:layout_marginStart="24dp"
      android:layout_marginTop="72dp"
      android:fontFamily="@font/nunito_semibold"
      android:text="@string/departamento"
      android:textSize="21sp"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/textView14" />

  <TextView
      android:id="@+id/textView16"
      android:layout_width="150dp"
      android:layout_height="40dp"
      android:layout_marginStart="24dp"
      android:layout_marginTop="32dp"
      android:fontFamily="@font/nunito_semibold"
      android:text="@string/municipio"
      android:textSize="21sp"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/textView15" />

  <EditText
      android:id="@+id/editTextTextPersonName5"
      android:layout_width="180dp"
      android:layout_height="40dp"
      android:layout_marginStart="24dp"
      android:layout_marginTop="72dp"
      android:layout_marginEnd="24dp"
      android:ems="10"
      android:fontFamily="@font/nunito"
      android:hint="@string/hint_departamento"
      android:inputType="textPersonName"
      android:textSize="16sp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.062"
      app:layout_constraintStart_toEndOf="@+id/textView15"
      app:layout_constraintTop_toBottomOf="@+id/textView14" />

  <EditText
      android:id="@+id/editTextTextPersonName6"
      android:layout_width="180dp"
      android:layout_height="40dp"
      android:layout_marginStart="24dp"
      android:layout_marginTop="32dp"
      android:layout_marginEnd="24dp"
      android:ems="10"
      android:fontFamily="@font/nunito"
      android:hint="@string/hint_municipio"
      android:inputType="textPersonName"
      android:textSize="16sp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.0"
      app:layout_constraintStart_toEndOf="@+id/textView16"
      app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName5" />

  <Button
      android:id="@+id/button3"
      android:layout_width="wrap_content"
      android:layout_height="50dp"
      android:layout_marginStart="32dp"
      android:layout_marginTop="100dp"
      android:layout_marginBottom="24dp"
      android:fontFamily="@font/nunito_semibold"
      android:text="@string/estadisticas_button"
      android:textAllCaps="false"
      android:textSize="21sp"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/textView16"
      app:layout_constraintVertical_bias="0.444" />

  <Button
      android:id="@+id/button4"
      android:layout_width="wrap_content"
      android:layout_height="50dp"
      android:layout_marginStart="32dp"
      android:layout_marginTop="100dp"
      android:layout_marginEnd="32dp"
      android:layout_marginBottom="24dp"
      android:fontFamily="@font/nunito_semibold"
      android:text="@string/buscar_button"
      android:textAllCaps="false"
      android:textSize="21sp"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.076"
      app:layout_constraintStart_toEndOf="@+id/button3"
      app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName6"
      app:layout_constraintVertical_bias="0.4" />
</androidx.constraintlayout.widget.ConstraintLayout>