<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/iconLogin"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:layout_marginTop="108dp"
        android:foregroundGravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/user" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="160dp"
        android:layout_height="100dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/mintic" />

    <EditText
        android:id="@+id/inputContrasena"
        android:layout_width="291dp"
        android:layout_height="38dp"
        android:layout_marginTop="28dp"
        android:ems="10"
        android:hint="@string/hint_contrasena"
        android:inputType="textPassword"
        android:shadowColor="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.571"
        app:layout_constraintStart_toEndOf="@+id/iconContrasena"
        app:layout_constraintTop_toBottomOf="@+id/inputCorreo" />

    <ImageView
        android:id="@+id/iconContrasena"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toTopOf="@+id/botonIngresar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iconCorreo"
        app:layout_constraintVertical_bias="0.163"
        app:srcCompat="@drawable/password" />

    <EditText
        android:id="@+id/inputCorreo"
        android:layout_width="291dp"
        android:layout_height="40dp"
        android:layout_marginTop="68dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:gravity="center_vertical"
        android:hint="@string/hint_correo"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.937"
        app:layout_constraintStart_toEndOf="@+id/iconCorreo"
        app:layout_constraintTop_toBottomOf="@+id/iconLogin" />

    <ImageView
        android:id="@+id/iconCorreo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="64dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iconLogin"
        app:srcCompat="@drawable/mail" />

    <Button
        android:id="@+id/botonIngresar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:background="@drawable/rounded_corner"
        android:fontFamily="@font/nunito_semibold"
        android:gravity="center"
        android:text="@string/login_button"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="21sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputContrasena" />

    <CheckBox
        android:id="@+id/checkBoxSesionIniciada"
        android:layout_width="207dp"
        android:layout_height="30dp"
        android:text="Mantener la sesión iniciada"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/olvidoContrasena"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/botonIngresar"
        app:layout_constraintVertical_bias="0.714" />

    <TextView
        android:id="@+id/olvidoContrasena"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="¿Olvidaste la contraseña?"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>